# MI_veselibas_dati

.devcontainer/: devcontainer.json  setup.sh
healthdq_ai/: Dockerfile  Makefile  README.md  memory  memory.py  pyproject.toml  requirements.txt
healthdq_ai/configs/: rules.yml
healthdq_ai/docs/: architecture.md  hitl.md  validation_protocol.md
healthdq_ai/prompts/: base_prompt.py  completeness_prompt.py  precision_prompt.py  reusability_prompt.py
healthdq_ai/src/healthdq/: __init__.py  cli.py  pipeline.py  schema_learner.py
healthdq_ai/src/healthdq/agents/: __init__.py  completeness.py  precision.py  reusability.py
healthdq_ai/src/healthdq/api/: __init__.py  server.py
healthdq_ai/src/healthdq/loaders/: __init__.py  csv_loader.py  fhir_loader.py  json_loader.py
healthdq_ai/src/healthdq/metrics/: __init__.py  basic.py
healthdq_ai/src/healthdq/rules/: __init__.py  engine.py  generation.py  learning.py  rules.yml  transform.py  validation.py
healthdq_ai/src/healthdq/ui/: streamlit_app.py
healthdq_ai/tests/: conftest.py  test_basic.py  test_transform_errors.py
